--- a/refactored-spoon/templates/index.html
+++ b/refactored-spoon/templates/index.html
@@ -1,22 +1,29 @@
 <!doctype html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurantes</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <h1 class="my-4">Lista de Restaurantes</h1>
 
-        <form method="post" class="form-inline mb-4">
-            <label for="city_id" class="mr-2">Filtrar por Ciudad:</label>
-            <select id="city_id" name="city_id" class="form-control mr-2">
-                <option value="">Todas</option>
-                {% for city in cities %}
-                    <option value="{{ city.id }}">{{ city.name }}</option>
-                {% endfor %}
-            </select>
-            <button type="submit" class="btn btn-primary">Filtrar</button>
+        <form method="post" class="row g-3 mb-4">
+            <div class="col-auto">
+                <label for="city_id" class="form-label">Filtrar por Ciudad:</label>
+                <select id="city_id" name="city_id" class="form-select">
+                    <option value="">Todas</option>
+                    {% for city in cities %}
+                        <option value="{{ city.id }}">{{ city.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="col-auto align-self-end">
+                <button type="submit" class="btn btn-primary">Filtrar</button>
+            </div>
         </form>
 
         <div class="row">
@@ -32,5 +39,7 @@
             {% endfor %}
         </div>
     </div>
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
