--- a/refactored-spoon/templates/index.html
+++ b/refactored-spoon/templates/index.html
@@ -6,6 +6,9 @@
     <title>Restaurantes</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/static/css/custom.css">
 </head>
 <body>
     <div class="container">
@@ -13,11 +16,11 @@
 
         <form method="post" class="row g-3 mb-4">
             <div class="col-auto">
-                <label for="city_id" class="form-label">Filtrar por Ciudad:</label>
-                <select id="city_id" name="city_id" class="form-select">
+                <label for="city_name" class="form-label">Filtrar por Ciudad:</label>
+                <select id="city_name" name="city_name" class="form-select">
                     <option value="">Todas</option>
                     {% for city in cities %}
-                        <option value="{{ city.id }}">{{ city.name }}</option>
+                        <option value="{{ city.name }}">{{ city.name }}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -26,18 +29,25 @@
             </div>
         </form>
 
-        <div class="row">
-            {% for restaurant in restaurants %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ restaurant.name }}</h5>
-                            <p class="card-text">{{ restaurant.address }}</p>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
+        <table class="table table-striped table-hover table-bordered">
+            <thead>
+                <tr>
+                    <th>Nombre <i class="bi bi-caret-down-fill"></i></th>
+                    <th>Dirección</th>
+                    <th>Ciudad</th>
+                    <th>Región</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for restaurant in restaurants %}
+                    <tr>
+                        <td>{{ restaurant.name }}</td>
+                        <td>{{ restaurant.address }}</td>
+                        <td>{{ restaurant.city_name }}</td>
+                        <td>{{ restaurant.region }}</td>
+                    {% endfor %}
+            </tbody>
+        </table>
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
