--- a/refactored_spoon/templates/index.html
+++ b/refactored_spoon/templates/index.html
@@ -3,40 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurantes</title>
+
+    <title>Refactored Spoon</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
+
+    <!-- Twitter Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.bootstrap5.min.css">
+
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/static/css/custom.css">
+    <!-- <link rel="stylesheet" href="/static/css/custom.css"> -->
 </head>
 <body>
     <div class="container">
-        <h1 class="my-4">Lista de Restaurantes</h1>
+        <h1 class="my-4">Llistat de Restaurants</h1>
 
-        <form method="post" class="row g-3 mb-4">
-            <div class="col-auto">
-                <label for="city_name" class="form-label">Filtrar por Ciudad:</label>
-                <select id="city_name" name="city_name" class="form-select">
-                    <option value="">Todas</option>
-                    {% for city in cities %}
-                        <option value="{{ city.name }}">{{ city.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="col-auto align-self-end">
-                <button type="submit" class="btn btn-primary">Filtrar</button>
-            </div>
-        </form>
-
-        <table class="table table-striped table-hover table-bordered">
+        <table id="restaurantTable" class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>Nom <i class="bi bi-caret-down-fill"></i></th>
+                    <th>Nom</th>
                     <th>Adreça</th>
                     <th>Ciutat</th>
                     <th>Provincia</th>
-                    <th>CA</th>
+                    <th>Regió</th>
                     <th>Pais</th>
                 </tr>
             </thead>
@@ -51,9 +44,32 @@
                         <td>{{ restaurant.country_name }}</td>
                     {% endfor %}
             </tbody>
+            <tfoot>
+                <tr>
+                    <th>Nom</th>
+                    <th>Adreça</th>
+                    <th>Ciutat</th>
+                    <th>Provincia</th>
+                    <th>Regió</th>
+                    <th>Pais</th>
+                </tr>
+            </tfoot>
         </table>
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- Twitter Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.bootstrap5.min.js"></script>
+
+    <!-- Custom JS -->
+    <script src="/static/js/custom.js"></script>
 </body>
 </html>
