--- a/refactored_spoon/templates/index.html
+++ b/refactored_spoon/templates/index.html
@@ -14,9 +14,6 @@
 
     <!-- DataTables CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.bootstrap5.min.css">
-
-    <!-- Custom CSS -->
-    <!-- <link rel="stylesheet" href="/static/css/custom.css"> -->
 </head>
 <body>
     <div class="container">
@@ -31,6 +28,7 @@
                     <th>Provincia</th>
                     <th>Regió</th>
                     <th>Pais</th>
+                    <th>Accions</th>
                 </tr>
             </thead>
             <tbody>
@@ -42,6 +40,7 @@
                         <td>{{ restaurant.province_name }}</td>
                         <td>{{ restaurant.region_name }}</td>
                         <td>{{ restaurant.country_name }}</td>
+                        <td><a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">Editar</a></td>
                     {% endfor %}
             </tbody>
             <tfoot>
@@ -52,9 +51,19 @@
                     <th>Provincia</th>
                     <th>Regió</th>
                     <th>Pais</th>
+                    <th>Accions</th>
                 </tr>
             </tfoot>
         </table>
+    </div>
+    <div class="container">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="alert alert-success" role="alert" id="flash-message">
+                    {{ messages[0] }}
+                </div>
+            {% endif %}
+        {% endwith %}
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -70,6 +79,6 @@
     <script src="https://cdn.datatables.net/2.1.5/js/dataTables.bootstrap5.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="/static/js/custom.js"></script>
+    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
 </body>
 </html>
