--- a/refactored_spoon/templates/index.html
+++ b/refactored_spoon/templates/index.html
@@ -40,7 +40,13 @@
                         <td>{{ restaurant.province_name }}</td>
                         <td>{{ restaurant.region_name }}</td>
                         <td>{{ restaurant.country_name }}</td>
-                        <td><a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">Editar</a></td>
+                        <td>
+                            {% if current_user.is_authenticated %}
+                                <a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">Editar</a>
+                            {% else %}
+                                <button class="btn btn-primary" disabled>Editar</button>
+                            {% endif %}
+                        </td>
                     {% endfor %}
             </tbody>
             <tfoot>
