--- a/refactored_spoon/templates/edit.html
+++ b/refactored_spoon/templates/edit.html
@@ -1,44 +1,34 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Restaurant</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container">
-        <h1 class="my-4">Editar Restaurant</h1>
-        <form method="POST">
-            <div class="mb-3">
-                <label for="name" class="form-label">Nom</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{ restaurant.name }}" required>
-            </div>
-            <div class="mb-3">
-                <label for="address" class="form-label">Adreça</label>
-                <input type="text" class="form-control" id="address" name="address" value="{{ restaurant.address }}" required>
-            </div>
-            <div class="mb-3">
-                <label for="city_name" class="form-label">Ciutat</label>
-                <input type="text" class="form-control" id="city_name" name="city_name" value="{{ restaurant.city_name }}" required>
-            </div>
-            <div class="mb-3">
-                <label for="province_name" class="form-label">Provincia</label>
-                <input type="text" class="form-control" id="province_name" name="province_name" value="{{ restaurant.province_name }}" required>
-            </div>
-            <div class="mb-3">
-                <label for="region_name" class="form-label">Regió</label>
-                <input type="text" class="form-control" id="region_name" name="region_name" value="{{ restaurant.region_name }}" required>
-            </div>
-            <div class="mb-3">
-                <label for="country_name" class="form-label">Pais</label>
-                <input type="text" class="form-control" id="country_name" name="country_name" value="{{ restaurant.country_name }}" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Guardar canvis</button>
-        </form>
+{% extends "layouts/base.html" %}
+
+{% block content %}
+<div class="container">
+  <h1 class="my-4">Editar Restaurant</h1>
+  <form method="POST">
+    <div class="mb-3">
+      <label for="name" class="form-label">Nom</label>
+      <input type="text" class="form-control" id="name" name="name" value="{{ restaurant.name }}" required>
     </div>
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+    <div class="mb-3">
+      <label for="address" class="form-label">Adreça</label>
+      <input type="text" class="form-control" id="address" name="address" value="{{ restaurant.address }}" required>
+    </div>
+    <div class="mb-3">
+      <label for="city_name" class="form-label">Ciutat</label>
+      <input type="text" class="form-control" id="city_name" name="city_name" value="{{ restaurant.city_name }}" required>
+    </div>
+    <div class="mb-3">
+      <label for="province_name" class="form-label">Provincia</label>
+      <input type="text" class="form-control" id="province_name" name="province_name" value="{{ restaurant.province_name }}" required>
+    </div>
+    <div class="mb-3">
+      <label for="region_name" class="form-label">Regió</label>
+      <input type="text" class="form-control" id="region_name" name="region_name" value="{{ restaurant.region_name }}" required>
+    </div>
+    <div class="mb-3">
+      <label for="country_name" class="form-label">Pais</label>
+      <input type="text" class="form-control" id="country_name" name="country_name" value="{{ restaurant.country_name }}" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Guardar canvis</button>
+  </form>
+</div>
+{% endblock content %}
