--- a/refactored_spoon/templates/index.html
+++ b/refactored_spoon/templates/index.html
@@ -1,114 +1,51 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layouts/base.html" %}
 
-    <title>Refactored Spoon</title>
+{% block content %}
+<div class="container">
+  <h1 class="my-4">Llistat de Restaurants</h1>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <!-- Twitter Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
-
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.bootstrap5.min.css">
-</head>
-<body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Refactored Spoon</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    {% if current_user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container">
-        <h1 class="my-4">Llistat de Restaurants</h1>
-
-        <table id="restaurantTable" class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Adreça</th>
-                    <th>Ciutat</th>
-                    <th>Provincia</th>
-                    <th>Regió</th>
-                    <th>Pais</th>
-                    <th>Accions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for restaurant in restaurants %}
-                    <tr>
-                        <td>{{ restaurant.name }}</td>
-                        <td>{{ restaurant.address }}</td>
-                        <td>{{ restaurant.city_name }}</td>
-                        <td>{{ restaurant.province_name }}</td>
-                        <td>{{ restaurant.region_name }}</td>
-                        <td>{{ restaurant.country_name }}</td>
-                        <td>
-                            {% if current_user.is_authenticated %}
-                                <a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">Editar</a>
-                            {% else %}
-                                <button class="btn btn-primary" disabled>Editar</button>
-                            {% endif %}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr>
-                    <th>Nom</th>
-                    <th>Adreça</th>
-                    <th>Ciutat</th>
-                    <th>Provincia</th>
-                    <th>Regió</th>
-                    <th>Pais</th>
-                    <th>Accions</th>
-                </tr>
-            </tfoot>
-        </table>
-    </div>
-    <div class="container">
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                <div class="alert alert-success" role="alert" id="flash-message">
-                    {{ messages[0] }}
-                </div>
+  <table id="restaurantTable" class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Nom</th>
+        <th>Adreça</th>
+        <th>Ciutat</th>
+        <th>Provincia</th>
+        <th>Regió</th>
+        <th>Pais</th>
+        <th>Accions</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for restaurant in restaurants %}
+        <tr>
+          <td>{{ restaurant.name }}</td>
+          <td>{{ restaurant.address }}</td>
+          <td>{{ restaurant.city_name }}</td>
+          <td>{{ restaurant.province_name }}</td>
+          <td>{{ restaurant.region_name }}</td>
+          <td>{{ restaurant.country_name }}</td>
+          <td>
+            {% if current_user.is_authenticated %}
+              <a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">Editar</a>
+            {% else %}
+              <button class="btn btn-primary" disabled>Editar</button>
             {% endif %}
-        {% endwith %}
-    </div>
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
-    <!-- Twitter Bootstrap JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-
-    <!-- DataTables JS -->
-    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/2.1.5/js/dataTables.bootstrap5.min.js"></script>
-
-    <!-- Custom JS -->
-    <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
-</body>
-</html>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+    <tfoot>
+      <tr>
+        <th>Nom</th>
+        <th>Adreça</th>
+        <th>Ciutat</th>
+        <th>Provincia</th>
+        <th>Regió</th>
+        <th>Pais</th>
+        <th>Accions</th>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+{% endblock content %}
