--- a/refactored_spoon/templates/login.html
+++ b/refactored_spoon/templates/login.html
@@ -1,28 +1,18 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <h1 class="my-4">Iniciar sesión</h1>
-        <form method="POST">
-            <div class="mb-3">
-                <label for="username" class="form-label">Usuario</label>
-                <input type="text" class="form-control" id="username" name="username" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-        </form>
+{% extends "layouts/base.html" %}
+
+{% block content %}
+<div class="container">
+  <h1 class="my-4">Iniciar sessió</h1>
+  <form method="POST">
+    <div class="mb-3">
+      <label for="username" class="form-label">Usuari</label>
+      <input type="text" class="form-control" id="username" name="username" required>
     </div>
-    <!-- Bootstrap JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+    <div class="mb-3">
+      <label for="password" class="form-label">Contrassenya</label>
+      <input type="password" class="form-control" id="password" name="password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Iniciar sessió</button>
+  </form>
+</div>
+{% endblock content %}
