--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       {% block content %}{% endblock %}
 
-      <div class="container">
+      <div class="container mt-5">
         {% with messages = get_flashed_messages() %}
           {% if messages %}
             <div class="alert alert-success" role="alert" id="flash-message">
