--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -31,14 +31,14 @@
     </div>
     {% block javascripts %}
       <!-- Bootstrap JS Bundle with Popper -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
       <!-- jQuery -->
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+      <script src="{{ url_for('static', filename='js/jquery-3.7.1.min.js') }}"></script>
       <!-- Twitter Bootstrap JS -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+      <script src="{{ url_for('static', filename='js/twitter-bootstrap.bundle.min.js') }}"></script>
       <!-- DataTables JS -->
-      <script src="https://cdn.datatables.net/2.1.5/js/dataTables.min.js"></script>
-      <script src="https://cdn.datatables.net/2.1.5/js/dataTables.bootstrap5.min.js"></script>
+      <script src="{{ url_for('static', filename='js/dataTables.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/dataTables.bootstrap5.min.js') }}"></script>
       <!-- Custom JS -->
       <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
     {% endblock javascripts %}
