--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -6,11 +6,11 @@
       <title>Refactored Spoon</title>
       {% block stylesheets %}
       <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link href="{{ url_for('static', filename='css/bootstrap-5.3.3.min.css') }}" rel="stylesheet">
       <!-- Twitter Bootstrap CSS -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
+      <link href="{{ url_for('static', filename='css/twitter-bootstrap-5.3.0.min.css') }}" rel="stylesheet">
       <!-- DataTables CSS -->
-      <link rel="stylesheet" href="https://cdn.datatables.net/2.1.5/css/dataTables.bootstrap5.min.css">
+      <link href="{{ url_for('static', filename='css/dataTables.bootstrap5-2.1.5.min.css') }}" rel="stylesheet">
       {% endblock stylesheets %}
   </head>
   <body>
