--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-<div class="container"></div>
+<div class="container">
   <h1 class="my-4">Sign In</h1>
   <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
@@ -21,6 +21,6 @@
     </p>
     <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
     <p>{{ form.submit() }}</p>
-</form>
+  </form>
 </div>
 {% endblock %}
