--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -17,17 +17,20 @@
     {% include 'layouts/navigation.html' %}
     <div class="wrapper">
       {% block content %}{% endblock %}
-
+    
       <div class="container mt-5">
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
-            <div class="alert alert-success" role="alert" id="flash-message">
-              {{ messages[0] }}
+            <div class="alert-container">
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}" role="alert" id="flash-message">
+                  {{ message }}
+                </div>
+              {% endfor %}
             </div>
           {% endif %}
         {% endwith %}
       </div>
-
     </div>
     {% block javascripts %}
       <!-- Bootstrap JS Bundle with Popper -->
