--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,18 +2,18 @@
 
 {% block content %}
 <div class="container">
-  <h1 class="my-4">Llistat de Restaurants</h1>
+  <h1 class="my-4">{{ _('List of Restaurants') }}</h1>
 
   <table id="restaurantTable" class="table table-striped table-hover">
     <thead>
       <tr>
-        <th>Nom</th>
-        <th>Adreça</th>
-        <th>Ciutat</th>
-        <th>Provincia</th>
-        <th>Regió</th>
-        <th>Pais</th>
-        <th>Accions</th>
+        <th>{{ _('Name') }}</th>
+        <th>{{ _('Address') }}</th>
+        <th>{{ _('City') }}</th>
+        <th>{{ _('Province') }}</th>
+        <th>{{ _('Region') }}</th>
+        <th>{{ _('Country') }}</th>
+        <th>{{ _('Actions') }}</th>
       </tr>
     </thead>
     <tbody>
@@ -27,9 +27,9 @@
           <td>{{ restaurant.country.name }}</td>
           <td>
             {% if current_user.is_authenticated %}
-              <a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">Editar</a>
+              <a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">{{ _('Edit') }}</a>
             {% else %}
-              <button class="btn btn-primary" disabled>Editar</button>
+              <button class="btn btn-primary" disabled>{{ _('Edit') }}</button>
             {% endif %}
           </td>
         </tr>
@@ -37,13 +37,13 @@
     </tbody>
     <tfoot>
       <tr>
-        <th>Nom</th>
-        <th>Adreça</th>
-        <th>Ciutat</th>
-        <th>Provincia</th>
-        <th>Regió</th>
-        <th>Pais</th>
-        <th>Accions</th>
+        <th>{{ _('Name') }}</th>
+        <th>{{ _('Address') }}</th>
+        <th>{{ _('City') }}</th>
+        <th>{{ _('Province') }}</th>
+        <th>{{ _('Region') }}</th>
+        <th>{{ _('Country') }}</th>
+        <th>{{ _('Actions') }}</th>
       </tr>
     </tfoot>
   </table>
