--- a/app/templates/layouts/navigation.html
+++ b/app/templates/layouts/navigation.html
@@ -9,15 +9,14 @@
       <ul class="navbar-nav ms-auto">
         {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">{{ _('Logout') }}</a>
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-link" href="{{ url_for('login') }}">{{ _('Login') }}</a>
           </li>
         {% endif %}
       </ul>
     </div>
   </div>
 </nav>
-<!-- /.navbar -->
