--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-  <h1 class="my-4">Sign In</h1>
+  <h1 class="my-4">{{ _('Sign In') }}</h1>
   <form action="" method="post" novalidate>
     {{ form.hidden_tag() }}
     <p>
