--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
           <td>{{ restaurant.country.name }}</td>
           <td>
             {% if current_user.is_authenticated %}
-              <a href="{{ url_for('edit', id=restaurant.id) }}" class="btn btn-primary">{{ _('Edit') }}</a>
+              <a href="{{ url_for('main.edit', id=restaurant.id) }}" class="btn btn-primary">{{ _('Edit') }}</a>
             {% else %}
               <button class="btn btn-primary" disabled>{{ _('Edit') }}</button>
             {% endif %}
