--- a/app/templates/layouts/navigation.html
+++ b/app/templates/layouts/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{ url_for('index') }}">Refactored Spoon</a>
+    <a class="navbar-brand" href="{{ url_for('main.index') }}">Refactored Spoon</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,11 +9,11 @@
       <ul class="navbar-nav ms-auto">
         {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout') }}">{{ _('Logout') }}</a>
+            <a class="nav-link" href="{{ url_for('main.logout') }}">{{ _('Logout') }}</a>
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">{{ _('Login') }}</a>
+            <a class="nav-link" href="{{ url_for('main.login') }}">{{ _('Login') }}</a>
           </li>
         {% endif %}
       </ul>
