--- a/app/templates/layouts/navigation.html
+++ b/app/templates/layouts/navigation.html
@@ -9,11 +9,11 @@
       <ul class="navbar-nav ms-auto">
         {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.logout') }}">{{ _('Logout') }}</a>
+            <a class="nav-link" href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a>
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.login') }}">{{ _('Login') }}</a>
+            <a class="nav-link" href="{{ url_for('auth.login') }}">{{ _('Login') }}</a>
           </li>
         {% endif %}
       </ul>
